k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: Chatbot-Atos
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: Chatbot-Atos
          servicePort: http
